--- a/buspass-ws/pom.xml
+++ b/buspass-ws/pom.xml
@@ -111,15 +111,39 @@
 				<artifactId>docker-maven-plugin</artifactId>
 				<version>0.19.0</version>
 				<configuration>
+				<showLogs>false</showLogs>
 					<images>
 						<image>
-							<name>sigerm</name>
+							<alias>microdrools</alias>
+							<name>sigerm/simpledrools</name>
 							<build>
 								<dockerFileDir>${project.basedir}/src/main/docker</dockerFileDir>
 							</build>
+							<run>
+								<namingStrategy>alias</namingStrategy>
+								<ports>
+									<port>${host.port}:8080</port>
+								</ports>
+								<wait>
+									<http>
+										<url>http://localhost:${host.port}/buspass?name=jfhgf&amp;age=12</url>
+									</http>
+									<time>10000</time>
+								</wait>
+							</run>
 						</image>
 					</images>
 				</configuration>
+				<executions>
+					<execution>
+						<id>build</id>
+						<phase>post-integration-test</phase>
+						<goals>
+							<goal>build</goal>
+							<goal>start</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 			<plugin>
 				<artifactId>maven-resources-plugin</artifactId>
